--- a/fencing-wires.html
+++ b/fencing-wires.html
@@ -110,7 +110,7 @@
 
     <!-- Category Start -->
     <section class="category">
-        <h2 data-aos="fade" data-aos-duration="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit repellendus.</h2>
+        <h2 data-aos="fade" data-aos-duration="1000">Explore our range of Fencing Wires crafted for security, resilience, and long-term performance.</h2>
         <div class="category-cards-row">
             <!-- Card 1 -->
             <a  href="barbed-wire.html" class="category-card" data-aos="fade" data-aos-duration="1000">
@@ -243,11 +243,11 @@
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
-            <h1>Quality You Can Trust</h1>
-            <p>The future isn’t just imagined - it’s engineered. Are you ready to re-imagineer tomorrow?</p>
+            <h1>Innovation starts with the right partner</h1>
+            <p>Join industry leaders who trust Group Nirmal for performance and reliability. <br> Are you ready to re-imagineer tomorrow?</p>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
-    </section> 
+    </section>
     <!-- Contact Us End -->
 
     <!-- Footer Start -->
