--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section class="product-details">
         <h1 data-aos="fade" data-aos-duration="1000">PRODUCT DETAILS</h1>
         <div class="product-cards-row container-lg">
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="200">
+            <div class="product-card" onclick="window.location.href='black-wires.html'" data-aos="fade" data-aos-duration="200">
                 <img src="assets/images/product1.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Black Wires</h2>
@@ -179,7 +179,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="400">
+            <div class="product-card" onclick="window.location.href='gi-wires.html'" data-aos="fade" data-aos-duration="400">
                 <img src="assets/images/product2.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>GI Wires</h2>
@@ -190,7 +190,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="600">
+            <div class="product-card" onclick="window.location.href='fencing-wires.html'" data-aos="fade" data-aos-duration="600">
                 <img src="assets/images/product3.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Fencing Wires</h2>
@@ -201,7 +201,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="800">
+            <div class="product-card" onclick="window.location.href='niznal.html'" data-aos="fade" data-aos-duration="800">
                 <img src="assets/images/product4.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Niznal</h2>
@@ -212,7 +212,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="1000">
+            <div class="product-card" onclick="window.location.href='zinc-wire-&-products.html'" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/product5.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Zinc Wire & Products</h2>
@@ -223,7 +223,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="1200">
+            <div class="product-card" onclick="window.location.href='aluminium-products.html'" data-aos="fade" data-aos-duration="1200">
                 <img src="assets/images/product6.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Aluminium Conductors</h2>
@@ -234,7 +234,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="1400">
+            <div class="product-card" onclick="window.location.href='cables.html'" data-aos="fade" data-aos-duration="1400">
                 <img src="assets/images/product7.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Cables</h2>
@@ -245,7 +245,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="1600">
+            <div class="product-card" onclick="window.location.href='welding-electrodes.html'" data-aos="fade" data-aos-duration="1600">
                 <img src="assets/images/product8.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Welding Solutions</h2>
@@ -256,7 +256,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="1800">
+            <div class="product-card" onclick="window.location.href='rolled-products.html'" data-aos="fade" data-aos-duration="1800">
                 <img src="assets/images/product9.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Rolled Products</h2>
@@ -267,7 +267,7 @@
                     <i class="fa-solid fa-right-long"></i>
                 </div>
             </div>
-            <div class="product-card" onclick="window.location.href='products.html'" data-aos="fade" data-aos-duration="2000">
+            <div class="product-card" onclick="window.location.href='trading.html'" data-aos="fade" data-aos-duration="2000">
                 <img src="assets/images/product10.jpeg" alt="image">
                 <div class="layer-1">
                     <h2>Trading</h2>
@@ -430,8 +430,8 @@
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
-            <h1>Quality You Can Trust</h1>
-            <p>The future isn’t just imagined - it’s engineered. Are you ready to re-imagineer tomorrow?</p>
+            <h1>Innovation starts with the right partner</h1>
+            <p>Join industry leaders who trust Group Nirmal for performance and reliability. <br> Are you ready to re-imagineer tomorrow?</p>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
     </section> 
