--- a/black-wires.html
+++ b/black-wires.html
@@ -251,11 +251,11 @@
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
-            <h1>Quality You Can Trust</h1>
-            <p>The future isn’t just imagined - it’s engineered. Are you ready to re-imagineer tomorrow?</p>
+            <h1>Innovation starts with the right partner</h1>
+            <p>Join industry leaders who trust Group Nirmal for performance and reliability. <br> Are you ready to re-imagineer tomorrow?</p>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
-    </section> 
+    </section>
     <!-- Contact Us End -->
 
     <!-- Footer Start -->
