--- a/steel-pipes-&-section.html
+++ b/steel-pipes-&-section.html
@@ -110,7 +110,7 @@
 
     <!-- Category Start -->
     <section class="category">
-        <h2 data-aos="fade" data-aos-duration="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit repellendus.</h2>
+        <h2 data-aos="fade" data-aos-duration="1000">Explore our steel pipes and sections, designed for strength, integrity, and multi-purpose use.</h2>
         <div class="category-cards-row">
             <!-- Card 1 -->
             <a  href="ERW-black-pipe.html" class="category-card" data-aos="fade" data-aos-duration="1000">
