Products by Industry Section added

--- a/our-presence.html
+++ b/our-presence.html
@@ -171,15 +171,15 @@
               </div>
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/4.png" alt="image">
+                  <img src="assets/images/media/press-releases/4.jpg" alt="image">
                 </div>
                 <div class="media-head">
-                  <h2>Wire & Cable India Emagazine Sep-Oct Issue 2024</h2>
+                  <h2>Digitalisation revolutionised cable designs and manufacturing.</h2>
                 </div>
                 <div class="media-desc">
-                  <p>Wire & Cable India’s Sep-Oct 2024 edition is live now! Wire & Cable India’s current edition entails a special feature “Top Cable Companies in India”, which is a biennial survey of India’s largest, most powerful wire and cable companies...</p>
+                  <p>Group Nirmal, a leading provider of advanced cables, highlights how technology has transformed its products, emphasising innovation and excellence. The company addresses smart city challenges by offering cables with...</p>
                 </div>
-                <a href="https://www.wirecable.in/wci-vol13-sep-oct-2024/" target="_blank"><button>READ MORE</button></a>
+                <a href="https://www.eprmagazine.com/industry-analysis/digitalisation-revolutionised-cable-designs-and-manufacturing/" target="_blank"><button>READ MORE</button></a>
               </div>
             </div>
           </div>
@@ -188,62 +188,62 @@
             <div class="media-boxes">
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/5.png" alt="image">
+                  <img src="assets/images/media/press-releases/5.jpg" alt="image">
                 </div>
                 <div class="media-head">
-                  <h2>ENERGY INFRASTRUCTURE RENEWABLES INTEGRATION AND SMART GRIDS</h2>
+                  <h2>Group Nirmal forays into zinc wire: introducing cutting-edge solutions.</h2>
                 </div>
                 <div class="media-desc">
-                  <p>Implementing smart grids from generation to consumer appliances is crucial for a sustainable energy future. This transition is urgent to reduce environmental impact, optimise...</p>
+                  <p>Group Nirmal is proud to announce the launch of its latest product line – a comprehensive range of zinc products engineered to redefine industry standards and meet the evolving...</p>
                 </div>
-                <a href="https://bit.ly/4ciDFqz" target="_blank"><button>READ
+                <a href="https://www.expometals.net/en/hall/semi-finished-products/drawn-wire/stand/nirmal-wires-p-ltd/news/group-nirmal-forays-into-zinc-wire-introducing-cutting-edge-solutions" target="_blank"><button>READ
                     MORE</button></a>
               </div>
               <div class="media-center" data-aos="fade" data-aos-duration="1000">
                 <div class="center-box">
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/6.png" alt="image">
+                      <img src="assets/images/media/press-releases/6.jpg" alt="image">
                     </div>
                   </div>
                   <div class="center-box-right">
                     <div class="media-head">
-                      <h2>Magazine Make In India – Best Manufacturers 2024</h2>
+                      <h2>Group Nirmal: Leading Excellence in the Steel Wire Industry.</h2>
                     </div>
                     <div class="media-desc">
-                      <p>Trade flock make in India, Best Manufacturers 2024...</p>
+                      <p>Over Five Decades of Innovation, Sustainability, and Quality Assurance – How Nirmal Wires Stands as a Leader in Diverse Wire Solutions. Group Nirmal has been manufacturing steel wires...</p>
                     </div>
-                    <a href="https://tradeflock.com/magazine-make-in-india-best-manufacturers-2024/" target="_blank"><button>READ MORE</button></a>
+                    <a href="https://www.eprmagazine.com/power-brand/group-nirmal-leading-excellencein-the-steel-wire-industry/" target="_blank"><button>READ MORE</button></a>
                   </div>
                 </div>
                 <div class="center-box">
                   <div class="center-box-right">
                     <div class="media-head">
-                      <h2>Group Nirmal forays into zinc wire: introducing cutting-edge solutions.</h2>
+                      <h2>Group Nirmal redefines coated wire tech with Niznal®, unlocking future possibilities.</h2>
                     </div>
                     <div class="media-desc">
-                      <p>Group Nirmal is proud to announce the launch of its latest product line – a comprehensive range of zinc products...</p>
+                      <p>With over 50 years of experience and expertise in wire manufacturing, the company has always been committed to pushing boundaries and meeting its customers’ evolving needs...</p>
                     </div>
-                    <a href="https://www.expometals.net/en/hall/semi-finished-products/drawn-wire/stand/nirmal-wires-p-ltd/news/group-nirmal-forays-into-zinc-wire-introducing-cutting-edge-solutions" target="_blank"><button>READ MORE</button></a>
+                    <a href="https://www.eprmagazine.com/power-brand/group-nirmal-redefines-coated-wire-tech-with-niznal-unlocking-future-possibilities/" target="_blank"><button>READ MORE</button></a>
                   </div>
                   <div class="center-box-left">
                     <div class="img-box">
-                      <img src="assets/images/media/press-releases/7.jpg" alt="image">
+                      <img src="assets/images/media/press-releases/7.png" alt="image">
                     </div>
                   </div>
                 </div>
               </div>
               <div class="media-aside" data-aos="fade" data-aos-duration="1000">
                 <div class="img-box">
-                  <img src="assets/images/media/press-releases/8.png" alt="image">
+                  <img src="assets/images/media/press-releases/8.jpg" alt="image">
                 </div>
                 <div class="media-head">
-                  <h2>Group Nirmal redefines coated wire tech with Niznal®, unlocking future possibilities.</h2>
+                  <h2>Group Nirmal Forays into Zinc Wire: Introducing Cutting-Edge Solutions.</h2>
                 </div>
                 <div class="media-desc">
-                  <p>With over 50 years of experience and expertise in wire manufacturing, the company has always been committed to pushing boundaries and meeting...</p>
+                  <p>The USD 260 million enterprise having state-of-the-art manufacturing for GI wires, steel wire, aluminium conductors, hot rolled products and construction steel, has launched a comprehensive line of zinc products meticulously crafted to...</p>
                 </div>
-                <a href="https://www.eprmagazine.com/power-brand/group-nirmal-redefines-coated-wire-tech-with-niznal-unlocking-future-possibilities/" target="_blank"><button>READ MORE</button></a>
+                <a href="https://www.wirecable.in/group-nirmal-forays-into-zinc-wire/" target="_blank"><button>READ MORE</button></a>
               </div>
             </div>
           </div>
@@ -255,12 +255,12 @@
                   <img src="assets/images/media/press-releases/9.jpg" alt="image">
                 </div>
                 <div class="media-head">
-                  <h2>Group Nirmal Forays into Zinc Wire: Introducing Cutting-Edge Solutions.</h2>
+                  <h2>Group Nirmal unleashes the potential of NIZNAL™, a revolutionary coated wire technology.</h2>
                 </div>
                 <div class="media-desc">
-                  <p>The USD 260 million enterprise having state-of-the-art manufacturing for GI wires, steel wire, aluminium conductors, hot rolled products and construction steel, has launched a comprehensive line of zinc products meticulously crafted to...</p>
+                  <p>In the field of industrial wires, Nirmal Wires (Group Nirmal) maintains a steady commitment to innovation and excellence. As a prominent industry figure, the company is pleased to...</p>
                 </div>
-                <a href="https://www.wirecable.in/group-nirmal-forays-into-zinc-wire/" target="_blank"><button>READ MORE</button></a>
+                <a href="https://www.expometals.net/en/hall/semi-finished-products/drawn-wire/stand/nirmal-wires-p-ltd/news/group-nirmal-unleashes-the-potential-of-niznal-tm-a-revolutionary-coated-wire-technology" target="_blank"><button>READ MORE</button></a>
               </div>
               <div class="media-center" data-aos="fade" data-aos-duration="1000">
                 <div class="center-box">
