--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home - Nirmal</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
+    <link rel="canonical" href="https://groupnirmal.com/">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -281,6 +282,68 @@
         </div>
     </section> 
     <!-- Product Details End -->
+
+    <!-- Products By Industry Start -->
+    <section class="industry-products">
+        <h2>PRODUCTS BY INDUSTRY</h2>
+        <div class="industry-card-row">
+            <!-- Card 1 -->
+            <a href="power-&-transmission.html" class="industry-card">
+                <img src="assets/images/industry-products/power-transmission.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>Power & Transmission</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+            <!-- Card 2 -->
+            <a href="" class="industry-card">
+                <img src="assets/images/industry-products/agriculture-fencing.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>Agriculture & Fencing</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+            <!-- Card 3 -->
+            <a href="" class="industry-card">
+                <img src="assets/images/industry-products/gen-engineering.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>General Engineering</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+            <!-- Card 4 -->
+            <a href="" class="industry-card">
+                <img src="assets/images/industry-products/concrete.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>Concrete Reinforcement</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+            <!-- Card 5 -->
+            <a href="" class="industry-card">
+                <img src="assets/images/industry-products/railways.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>Railways</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+            <!-- Card 6 -->
+            <a href="" class="industry-card">
+                <img src="assets/images/industry-products/construction.png" alt="image" loading="lazy">
+                <div class="layer"></div>
+                <div class="industry-card-content">
+                    <h3>Construction</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </a>
+        </div>
+    </section> 
+    <!-- Products By Industry End -->
 
     <!-- Media Start -->
     <section class="media container-lg">
