Add new HTML pages for General Engineering and Railways sections with complete structure and contents

--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
 
     <!-- Products By Industry Start -->
     <section class="industry-products">
-        <h2>PRODUCTS BY INDUSTRY</h2>
+        <h2 data-aos="fade" data-aos-duration="1000">PRODUCTS BY INDUSTRY</h2>
         <div class="industry-card-row">
             <!-- Card 1 -->
-            <a href="power-&-transmission.html" class="industry-card">
+            <a href="power-&-transmission.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/power-transmission.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
@@ -297,7 +297,7 @@
                 </div>
             </a>
             <!-- Card 2 -->
-            <a href="" class="industry-card">
+            <a href="agriculture-&-fencing.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/agriculture-fencing.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
@@ -306,7 +306,7 @@
                 </div>
             </a>
             <!-- Card 3 -->
-            <a href="" class="industry-card">
+            <a href="general-engineering.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/gen-engineering.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
@@ -315,7 +315,7 @@
                 </div>
             </a>
             <!-- Card 4 -->
-            <a href="" class="industry-card">
+            <a href="concrete-reinforcement.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/concrete.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
@@ -324,7 +324,7 @@
                 </div>
             </a>
             <!-- Card 5 -->
-            <a href="" class="industry-card">
+            <a href="railways.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/railways.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
@@ -333,7 +333,7 @@
                 </div>
             </a>
             <!-- Card 6 -->
-            <a href="" class="industry-card">
+            <a href="construction.html" class="industry-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/industry-products/construction.png" alt="image" loading="lazy">
                 <div class="layer"></div>
                 <div class="industry-card-content">
