--- a/products.html
+++ b/products.html
@@ -861,7 +861,7 @@
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#af" type="button" role="tab"
                                 aria-selected="false"><span>AGRICULTURE & FENCING</span></button>
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#ge" type="button" role="tab"
-                                aria-selected="false"><span>GENERAL ENGINEERNING</span></button>
+                                aria-selected="false"><span>GENERAL ENGINEERING</span></button>
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#cr" type="button" role="tab"
                                 aria-selected="false"><span> CONCRETE REINFORCEMENT</span></button>
                             <button class="nav-link" data-bs-toggle="pill" data-bs-target="#rail" type="button"
